# hssp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
configs/: settings.yaml
hssp/: __init__.py  exceptions.py  middleware.py  settings.py  spider.py
hssp/item/: __init__.py  item.py  mgr.py
hssp/request/: request.py
hssp/response/: response.py
src/hssp/: __init__.py
src/hssp/exception/: exception.py
src/hssp/logger/: handler.py  log.py
src/hssp/models/: config.py  net.py
src/hssp/network/: __init__.py  net.py
src/hssp/network/downloader/: __init__.py  aiohttp.py  base.py  curl_cffi.py  httpx.py  requests.py  requests_go.py
src/hssp/network/response/: __init__.py  response.py  selector.py
src/hssp/settings/: setting_base.py  settings.py
src/hssp/utils/: crypto.py  rand.py  time.py
src/test/: test.py
