[project]
name = "hssp"
version = "0.3.3"
description = "一个简单快速的异步爬虫框架"
readme = "README.md"
authors = [
    { name = "昊色居士", email = "xhrtxh@gmail.com" },
]
dependencies = [
    "uvloop; sys_platform != 'win32' and implementation_name == 'cpython'",
    "parsel>=1.6.0",
    "loguru>=0.6.0",
    "furl>=2.1.3",
    "httpx>=0.23.0",
    "openpyxl>=3.0.10",
    "fake-useragent>=0.1.11",
    "pyppeteer>=1.0.2",
    "pandas>=1.1.5",
    "orjson>=3.8.0",
    "tenacity>=8.0.1",
    "aiofiles>=0.8.0",
]
requires-python = ">=3.7"
license = { text = "MIT" }
classifiers = [
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: BSD",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://github.com/x-haose/hssp"

[tool]
[tool.pdm]

[tool.pdm.build]
excludes = ["./**/.git"]
package-dir = "src"
includes = ["hssp", "hssp/res/fake_useragent_0.1.11.json"]
source-includes = ["tests", "LICENSE", "README.md"]

[[tool.pdm.source]]
name = "pypi"
url = "https://mirrors.aliyun.com/pypi/simple/"
verify_ssl = true

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
