[project]
name = "hssp"
version = "0.4.15"
keywords = ["爬虫", "异步", "爬虫框架"]
description = "一个简单快速的异步爬虫框架"
authors = [
    { name = "昊色居士", email = "xhrtxh@gmail.com" }
]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: BSD",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.10"

dependencies = [
    # css、xpath解析器
    "parsel>=1.9.1",
    # 日志打印
    "loguru>=0.7.2",
    # url 解析
    "furl>=2.1.3",
    # 假UA
    "fake-useragent>=1.5.1",
    # 重试库
    "tenacity>=8.3.0",
    # pydantic 模型定义
    "pydantic[dotenv]>=2.9.2",
    # pydantic的设置插件
    "pydantic-settings[yaml,toml]>=2.5.2",
    # 加解密
    "pycryptodomex>=3.20.0",
    # httpx 异步网络请求
    "httpx[http2,socks]>=0.28.1",
    # aiohttp 异步网络请求
    "aiohttp>=3.9.5",
    # 同步requests情求库
    "requests>=2.31.0",
    # 定时任务
    "apscheduler>=3.10.4",
    # 事件与信号
    "blinker>=1.8.2",
    # drissionpage情求库
    "drissionpage>=4.0.5.6",
    # curl-cffi情求库
    "curl-cffi>=0.7.2",
]

[project.urls]
homepage = "https://github.com/x-haose/hssp"
repository = "https://github.com/x-haose/hssp"
documentation = "https://github.com/x-haose/hssp"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "twine>=6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hssp"]

[[tool.rye.sources]]
name = "default"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.bandit]
skips = [
    "B501",
    "B113",
    "B304"
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
select = [
    # pycodestyle error
    "E",
    # Pyflakes
    "F",
    # pycodestyle warnings
    "W",
    # pyupgrade
    "UP",
    # flake8-comprehensions
    "C",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    # do not perform function calls in argument defaults
    "B008",
    # too complex
    "C901",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
